examples/example_complex/build_errors.txt
   Compiling complex_cli v0.1.0 (/home/noah/src/reprorusted-python-cli/examples/example_complex)
error[E0412]: cannot find type `Exception` in this scope
  --> complex_cli.rs:91:63
   |
91 | pub fn email_address(value: serde_json::Value) -> Result<i32, Exception> {
   |                                                               ^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
91 | pub fn email_address<Exception>(value: serde_json::Value) -> Result<i32, Exception> {
   |                     +++++++++++

warning: unused import: `regex as re`
 --> complex_cli.rs:2:5
  |
2 | use regex as re;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std as os`
 --> complex_cli.rs:4:5
  |
4 | use std as os;
  |     ^^^^^^^^^

warning: unreachable statement
  --> complex_cli.rs:73:9
   |
72 |         return port;
   |         ----------- any code following this expression is unreachable
73 |         panic!("{}", format!("Port must be an integer, got '{:?}'", value));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0605]: non-primitive cast: `serde_json::Value` as `i32`
  --> complex_cli.rs:65:20
   |
65 |         let port = (value) as i32;
   |                    ^^^^^^^^^^^^^^ an `as` expression can be used to convert enum types to numeric types only if the enum type is unit-only or field-less
   |
   = note: see https://doc.rust-lang.org/reference/items/enumerations.html#casting for more information

warning: unreachable statement
  --> complex_cli.rs:86:9
   |
85 |         return num;
   |         ---------- any code following this expression is unreachable
86 |         panic!("{}", format!("Value must be an integer, got '{:?}'", value));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement

error[E0605]: non-primitive cast: `serde_json::Value` as `i32`
  --> complex_cli.rs:81:19
   |
81 |         let num = (value) as i32;
   |                   ^^^^^^^^^^^^^^ an `as` expression can be used to convert enum types to numeric types only if the enum type is unit-only or field-less
   |
   = note: see https://doc.rust-lang.org/reference/items/enumerations.html#casting for more information

error[E0308]: mismatched types
   --> complex_cli.rs:93:50
    |
 93 |     if !regex::Regex::new(pattern).unwrap().find(value) {
    |                                             ---- ^^^^^ expected `&str`, found `Value`
    |                                             |
    |                                             arguments to this method are incorrect
    |
note: method defined here
   --> /home/noah/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/regex-1.12.2/src/regex/string.rs:232:12
    |
232 |     pub fn find<'h>(&self, haystack: &'h str) -> Option<Match<'h>> {
    |            ^^^^

error[E0600]: cannot apply unary operator `!` to type `Option<regex::Match<'_>>`
   --> complex_cli.rs:93:8
    |
 93 |     if !regex::Regex::new(pattern).unwrap().find(value) {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot apply unary operator `!`
    |
note: the foreign item type `Option<regex::Match<'_>>` doesn't implement `Not`
   --> /home/noah/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/option.rs:594:1
    |
594 | pub enum Option<T> {
    | ^^^^^^^^^^^^^^^^^^ not implement `Not`

error[E0308]: mismatched types
   --> complex_cli.rs:96:8
    |
 96 |     Ok(value)
    |     -- ^^^^^ expected `i32`, found `Value`
    |     |
    |     arguments to this enum variant are incorrect
    |
help: the type constructed contains `serde_json::Value` due to the type of the argument passed
   --> complex_cli.rs:96:5
    |
 96 |     Ok(value)
    |     ^^^-----^
    |        |
    |        this argument influences the type of `Ok`
note: tuple variant defined here
   --> /home/noah/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/result.rs:554:5
    |
554 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^

error[E0308]: mismatched types
   --> complex_cli.rs:117:33
    |
111 |             let mut output_format;
    |                 ----------------- expected due to the type of this binding
...
117 |                 output_format = env_format.to_lowercase();
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
    |
help: consider borrowing here
    |
117 |                 output_format = &env_format.to_lowercase();
    |                                 +

error[E0308]: mismatched types
   --> complex_cli.rs:124:8
    |
124 |     if args.output {
    |        ^^^^^^^^^^^ expected `bool`, found `Option<String>`
    |
    = note: expected type `bool`
               found enum `Option<std::string::String>`
help: use `Option::is_some` to test if the `Option` has a value
    |
124 |     if args.output.is_some() {
    |                   ++++++++++

error[E0308]: mismatched types
   --> complex_cli.rs:130:8
    |
130 |     if args.encoding {
    |        ^^^^^^^^^^^^^ expected `bool`, found `String`

error[E0308]: mismatched types
   --> complex_cli.rs:133:8
    |
133 |     if args.port {
    |        ^^^^^^^^^ expected `bool`, found `Option<String>`
    |
    = note: expected type `bool`
               found enum `Option<std::string::String>`
help: use `Option::is_some` to test if the `Option` has a value
    |
133 |     if args.port.is_some() {
    |                 ++++++++++

error[E0308]: mismatched types
   --> complex_cli.rs:136:8
    |
136 |     if args.count {
    |        ^^^^^^^^^^ expected `bool`, found `Option<String>`
    |
    = note: expected type `bool`
               found enum `Option<std::string::String>`
help: use `Option::is_some` to test if the `Option` has a value
    |
136 |     if args.count.is_some() {
    |                  ++++++++++

error[E0308]: mismatched types
   --> complex_cli.rs:139:8
    |
139 |     if args.email {
    |        ^^^^^^^^^^ expected `bool`, found `Option<String>`
    |
    = note: expected type `bool`
               found enum `Option<std::string::String>`
help: use `Option::is_some` to test if the `Option` has a value
    |
139 |     if args.email.is_some() {
    |                  ++++++++++

error[E0308]: mismatched types
   --> complex_cli.rs:142:8
    |
142 |     if config_file {
    |        ^^^^^^^^^^^ expected `bool`, found `Option<String>`
    |
    = note: expected type `bool`
               found enum `Option<std::string::String>`
help: use `Option::is_some` to test if the `Option` has a value
    |
142 |     if config_file.is_some() {
    |                   ++++++++++

Some errors have detailed explanations: E0308, E0412, E0600, E0605.
For more information about an error, try `rustc --explain E0308`.
warning: `complex_cli` (bin "complex_cli") generated 4 warnings
error: could not compile `complex_cli` (bin "complex_cli") due to 13 previous errors; 4 warnings emitted
